sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:5: error: not found: value i
    while (plusPetit(i, j-1)==true && j>0){
                     ^